# inkverify

./: .gitignore  Cargo.toml  README.md  index.html
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/pkg/: inkverify_core.d.ts  inkverify_core.js  inkverify_core_bg.wasm  inkverify_core_bg.wasm.d.ts  package.json
core/src/: engine.rs  grid.rs  lib.rs
